# controllers

./: .gitmodules  Readme.md
apriltag_ros2/: CMakeLists.txt  package.xml
apriltag_ros2/msg/: DetectedGoalArray.msg
apriltag_ros2/src/: saved_tag_goals.yaml
apriltag_ros2/src/Apriltag-node/: apriltag_node.cpp
apriltag_ros2/src/Gaze-tracking/: eyetrax_websocket_bridge.py
apriltag_ros2/src/Vocal-detection/: voctest.py
apriltag_ros2/srv/: SaveCurrentTagGoal.srv
cartesian_velocity/: CMakeLists.txt  Readme.md  package.xml
cartesian_velocity/config/: cartesian_velocity_controller.xml  controllers.yaml  explorer_params.yaml  explorer_snake.yaml  franka_params.yaml  kinova_cartesian_teleop_controllers.yaml  kinova_params.yaml  kinova_params_qp_observer.yaml
cartesian_velocity/include/cartesian_velocity/: cartesian_velocity_teleop_controller.hpp  snake_demo.hpp
cartesian_velocity/launch/: cartesian_velocity_controller_launch.py  explorer_cartesian_velocity_teleop.launch.py  explorer_snake.launch.py  franka_cartesian_velocity.launch.py  franka_cartesian_velocity_teleop.launch.py  franka_teleop_cartesian_velocity_launch.py  full_gen3_teleop_bringup.launch.py  kinova_gen3_teleop_full_bringup.launch.py
cartesian_velocity/src/: cartesian_velocity_teleop_controller.cpp  snake_demo.cpp
joint_position_interpolator/: CMakeLists.txt  Readme.md  package.xml
joint_position_interpolator/config/: explorer.yaml  explorer_params.yaml  joint_position_interpolator.xml
joint_position_interpolator/include/joint_position_interpolator/: joint_position_interpolator.hpp
joint_position_interpolator/launch/: explorer_real.launch.py  explorer_sim.launch.py
joint_position_interpolator/src/: joint_position_interpolator.cpp
kinematic_guides_cartesian_velocity/: CMakeLists.txt  Readme.md  package.xml
kinematic_guides_cartesian_velocity/config/: explorer_params.yaml  franka_params.yaml  kinematic_guides_cartesian.xml  kinova_params.yaml
kinematic_guides_cartesian_velocity/include/kinematic_guides_cartesian_velocity/: shared_control_cartesian_velocity.hpp
kinematic_guides_cartesian_velocity/launch/: kinematic_guide_franka.launch.py  shared_control_explorer.launch.py  shared_control_franka.py  shared_control_kinova.launch.py
kinematic_guides_cartesian_velocity/rviz/: explorer_config.rviz  goal_markers.rviz
kinematic_guides_cartesian_velocity/src/: goal_marker_publisher.cpp  shared_control_cartesian_velocity.cpp
shared_control_icra_2025/: CMakeLists.txt  Readme.md  package.xml
shared_control_icra_2025/config/: cartesian_velocity_controller.xml
shared_control_icra_2025/launch/: cartesian_velocity_controller_launch.py
shared_control_icra_2025/src/: cartesian_velocity_teleop_controller.cpp
